# Fallegji

./: .db  .gitignore  Cargo.toml  Cargo.toml~  Hiyya.db  LICENSE  README.md  bab.db  baba.db  fallegji.toml  test 2.db  testiyya.db
src/: app.rs  auth.rs  config.rs  connection.rs  db.rs  encryption.rs  lib.rs  logging.rs  main.rs  messaging.rs  tunneling.rs  vim.rs
src/ui_screens/: chat.rs  home.rs  initialization.rs  mod.rs  onboarding.rs
tests/: TUI_testsuite.rs  auth_testsuite.rs  connection_testsuite.rs  db_testsuite.rs  encryption_testsuite.rs  logging_testsuite.rs  messaging_testsuite.rs  tunneling_testsuite.rs
