[package]
name = "fallegji"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
boringtun = "0.6.0"
chacha20poly1305 = "0.10.1"
crossterm = "0.29.0"
nix = { version = "0.30.1", features = ["user"] }
ratatui = "0.30.0"
rusqlite = "0.38.0"
sha2 = "0.10.9"
tokio = {version = "1.48.0", features = ["full"]}
zeromq = {version = "0.4.1", features = ["tokio-runtime"]}

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
