[package]
name = "fallegji"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
getrandom = "0.3.4"
lazy_static = "1.5.0"
nix = { version = "0.30.1", features = ["user"] }
ratatui = "0.30.0"
regex = "1.12.2"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
time = "0.3.44"
tokio = {version = "1.48.0", features = ["full"]}
zmq = "0.10.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
