[package]
name = "fallegji"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chacha20poly1305 = "0.10.1"
crossterm = "0.29.0"
getrandom = { version = "0.3.4", features = ["std"] }
hex = "0.4.3"
hkdf = "0.12.4"
lazy_static = "1.5.0"
nix = { version = "0.30.1", features = ["user"] }
ratatui = "0.30.0"
regex = "1.12.2"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
time = "0.3.44"
tokio = {version = "1.48.0", features = ["full"]}
tokio-util = "0.7.18"
toml = "0.9.11"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeromq = "0.4.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
